--- a/journey.html
+++ b/journey.html
@@ -29,8 +29,7 @@
 				<a class="mr-5 hover:text-gray-900" href="index.html">Home</a>
 				<a class="mr-5 hover:text-gray-900" href='services.html'>Technology Dossier</a>
 				<a class="mr-5 hover:text-gray-900" href='journey.html'>Journey</a>
-				<a class="mr-5 hover:text-gray-900" href='gallery.html'>Gallery</a>
-				<a class="mr-5 hover:text-gray-900" href='contact.html'>Enquire</a>
+				<a class="mr-5 hover:text-gray-900" href='contact.html'>Contact</a>
 			</nav>
 		</div>
 	</header>
