--- a/index.html
+++ b/index.html
@@ -28,9 +28,8 @@
 				class="md:mr-auto md:ml-4 md:py-1 md:pl-4 md:border-l md:border-gray-400	flex flex-wrap items-center text-base justify-center">
 				<a class="mr-5 hover:text-gray-900" href="index.html">Home</a>
 				<a class="mr-5 hover:text-gray-900" href='services.html'>Technology Dossier</a>
-				<a class="mr-5 hover:text-gray-900" href='packages.html'>Packages</a>
 				<a class="mr-5 hover:text-gray-900" href='journey.html'>Journey</a>
-				<a class="mr-5 hover:text-gray-900" href='contact.html'>Enquire</a>
+				<a class="mr-5 hover:text-gray-900" href='contact.html'>Contact</a>
 			</nav>
 		</div>
 	</header>
